--- a/backend/stocksbackend/requirements.txt
+++ b/backend/stocksbackend/requirements.txt
@@ -1,6 +1,11 @@
 asgiref==3.2.7
 certifi==2020.4.5.1
+chardet==3.0.4
+defusedxml==0.6.0
 Django==3.0.6
+django-allauth==0.41.0
+django-cors-headers==3.2.1
+django-rest-auth==0.9.5
 django-filter==2.2.0
 django-six==1.0.4
 djangorestframework==3.11.0
@@ -9,3 +14,12 @@ pytz==2020.1
 sqlparse==0.3.1
 wincertstore==0.2
 xlwt==1.3.0
+idna==2.9
+oauthlib==3.1.0
+psycopg2==2.8.5
+python3-openid==3.1.0
+pytz==2020.1
+requests==2.23.0
+requests-oauthlib==1.3.0
+six==1.14.0
+urllib3==1.25.9
