--- a/backend/stocksbackend/requirements.txt
+++ b/backend/stocksbackend/requirements.txt
@@ -1,25 +1,67 @@
+aiohttp==3.6.2
+alpha-vantage==2.2.0
+appdirs==1.4.4
 asgiref==3.2.7
+astroid==2.4.1
+async-timeout==3.0.1
+attrs==19.3.0
+autopep8==1.5.2
+black==19.10b0
 certifi==2020.4.5.1
 chardet==3.0.4
+click==7.1.2
+colorama==0.4.3
+coreapi==2.3.3
+coreschema==0.0.4
 defusedxml==0.6.0
 Django==3.0.6
 django-allauth==0.41.0
-django-cors-headers==3.2.1
-django-rest-auth==0.9.5
+django-cors-headers==3.3.0
+django-extensions==2.2.9
 django-filter==2.2.0
+django-rest-auth==0.9.5
+django-rest-swagger==2.2.0
 django-six==1.0.4
 djangorestframework==3.11.0
-Markdown==3.2.2
-pytz==2020.1
-sqlparse==0.3.1
-wincertstore==0.2
-xlwt==1.3.0
+drf-yasg==1.17.1
 idna==2.9
+inflection==0.4.0
+isort==4.3.21
+itypes==1.2.0
+Jinja2==2.11.2
+lazy-object-proxy==1.4.3
+lxml==4.5.1
+Markdown==3.2.2
+MarkupSafe==1.1.1
+mccabe==0.6.1
+multidict==4.7.6
+numpy==1.18.4
 oauthlib==3.1.0
+openapi-codec==1.3.2
+packaging==20.4
+pandas==1.0.3
+pathspec==0.8.0
 psycopg2==2.8.5
+pycodestyle==2.6.0
+pylint==2.5.2
+pyparsing==2.4.7
+python-dateutil==2.8.1
 python3-openid==3.1.0
 pytz==2020.1
+regex==2020.5.14
 requests==2.23.0
 requests-oauthlib==1.3.0
+rope==0.17.0
+ruamel.yaml==0.16.10
+ruamel.yaml.clib==0.2.0
+simplejson==3.17.0
 six==1.14.0
+sqlparse==0.3.1
+toml==0.10.1
+typed-ast==1.4.1
+uritemplate==3.0.1
 urllib3==1.25.9
+wincertstore==0.2
+wrapt==1.12.1
+xlwt==1.3.0
+yarl==1.4.2
