--- a/backend/stocksbackend/requirements.txt
+++ b/backend/stocksbackend/requirements.txt
@@ -1,25 +1,85 @@
+aiohttp==3.6.2
+alpha-vantage==2.2.0
+alphavantage==0.0.11
+amqp==2.5.2
+anyjson==0.3.3
 asgiref==3.2.7
+astroid==2.4.1
+async-timeout==3.0.1
+attrs==19.3.0
+beat==0.3.0
+billiard==3.6.3.0
+celery==4.4.2
 certifi==2020.4.5.1
 chardet==3.0.4
+coreapi==2.3.3
+coreschema==0.0.4
+decorators==0.1.1
 defusedxml==0.6.0
 Django==3.0.6
 django-allauth==0.41.0
-django-cors-headers==3.2.1
-django-rest-auth==0.9.5
+django-celery==3.3.1
+django-celery-beat==2.0.0
+django-cors-headers==3.3.0
+django-extensions==2.2.9
 django-filter==2.2.0
+django-rest-auth==0.9.5
+django-scheduler==0.9.3
 django-six==1.0.4
+django-timezone-field==4.0
 djangorestframework==3.11.0
-Markdown==3.2.2
-pytz==2020.1
-sqlparse==0.3.1
-wincertstore==0.2
-xlwt==1.3.0
+drf-yasg==1.17.1
+foil==0.2.7
+icalendar==4.0.6
 idna==2.9
+idna-ssl==1.1.0
+importlib-metadata==1.6.0
+inflection==0.4.0
+iso8601==0.1.12
+isort==4.3.21
+itypes==1.2.0
+Jinja2==2.11.2
+jsonschema==3.2.0
+kombu==4.6.8
+lazy-object-proxy==1.4.3
+lxml==4.5.1
+Markdown==3.2.2
+MarkupSafe==1.1.1
+mccabe==0.6.1
+multidict==4.7.5
+numpy==1.18.4
 oauthlib==3.1.0
+packaging==20.4
+pandas==1.0.3
 psycopg2==2.8.5
+pylint==2.5.2
+pylint-django==2.0.15
+pylint-plugin-utils==0.6
+pyparsing==2.4.7
+pyrsistent==0.16.0
+python-crontab==2.5.1
+python-dateutil==2.8.1
 python3-openid==3.1.0
+pytickersymbols==1.1.11
 pytz==2020.1
+PyYAML==5.3.1
+redis==3.5.2
 requests==2.23.0
 requests-oauthlib==1.3.0
+ruamel.yaml==0.16.10
+ruamel.yaml.clib==0.2.0
+schedule==0.6.0
 six==1.14.0
+sqlparse==0.3.1
+swagger-spec-validator==2.6.0
+toml==0.10.1
+typed-ast==1.4.1
+typing-extensions==3.7.4.2
+uritemplate==3.0.1
 urllib3==1.25.9
+vine==1.3.0
+wincertstore==0.2
+wrapt==1.12.1
+xlwt==1.3.0
+yarl==1.4.2
+zipp==3.1.0
