--- a/frontend/stonksapp/package.json
+++ b/frontend/stonksapp/package.json
@@ -10,8 +10,10 @@
     "@testing-library/user-event": "^7.2.1",
     "antd": "^4.2.2",
     "axios": "^0.19.2",
+    "plotly.js": "^1.54.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-plotly.js": "^2.4.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
