--- a/frontend/stonksapp/package.json
+++ b/frontend/stonksapp/package.json
@@ -26,7 +26,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "postbuild": "mv build/* /srv/www/stockmarketapp/"
+    "postbuild": "cp -r build/* /srv/www/stockmarketapp/build/"
   },
   "eslintConfig": {
     "extends": "react-app"
