--- a/frontend/stonksapp/package.json
+++ b/frontend/stonksapp/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^7.2.1",
     "antd": "^4.2.2",
     "axios": "^0.19.2",
+    "d3": "^5.16.0",
     "plotly.js": "^1.54.1",
     "plotly.js-basic-dist": "^1.54.1",
     "react": "^16.13.1",
@@ -18,6 +19,7 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-stockcharts": "^0.7.8",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
   },
