--- a/frontend/stonksapp/package.json
+++ b/frontend/stonksapp/package.json
@@ -11,14 +11,16 @@
     "antd": "^4.2.2",
     "axios": "^0.19.2",
     "d3": "^5.16.0",
-    "plotly.js": "^1.54.1",
+    "highcharts": "^8.1.2",
+    "highcharts-react-official": "^3.0.0",
+    "plotly.js": "^1.54.7",
     "plotly.js-basic-dist": "^1.54.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-plotly.js": "^2.4.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.2",
     "react-stockcharts": "^0.7.8",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
