--- a/frontend/stonksapp/package.json
+++ b/frontend/stonksapp/package.json
@@ -27,7 +27,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "postbuild": "cp -r build/* /srv/www/stockmarketapp/build/"
   },
   "eslintConfig": {
     "extends": "react-app"
