--- a/backend/stocksbackend/requirements.txt
+++ b/backend/stocksbackend/requirements.txt
@@ -7,17 +7,22 @@ asgiref==3.2.7
 astroid==2.4.1
 async-timeout==3.0.1
 attrs==19.3.0
+backcall==0.2.0
 beat==0.3.0
 billiard==3.6.3.0
 celery==4.4.2
-certifi==2020.4.5.1
+certifi==2020.6.20
 chardet==3.0.4
 coreapi==2.3.3
 coreschema==0.0.4
+cvxpy==1.0.31
+cycler==0.10.0
+decorator==4.4.2
 decorators==0.1.1
 defusedxml==0.6.0
+dill==0.3.2
 Django==3.0.6
-django-allauth==0.41.0
+django-allauth==0.42.0
 django-celery==3.3.1
 django-celery-beat==2.0.0
 django-cors-headers==3.3.0
@@ -29,33 +34,56 @@ django-six==1.0.4
 django-timezone-field==4.0
 djangorestframework==3.11.0
 drf-yasg==1.17.1
+ecos==2.0.7.post1
+ffn==0.3.4
 foil==0.2.7
+future==0.18.2
 icalendar==4.0.6
 idna==2.9
 idna-ssl==1.1.0
 importlib-metadata==1.6.0
 inflection==0.4.0
+ipykernel==5.3.0
+ipython==7.16.1
+ipython-genutils==0.2.0
 iso8601==0.1.12
 isort==4.3.21
 itypes==1.2.0
+jedi==0.17.1
 Jinja2==2.11.2
+joblib==0.16.0
 jsonschema==3.2.0
+jupyter-client==6.1.5
+jupyter-core==4.6.3
+kiwisolver==1.2.0
 kombu==4.6.8
 lazy-object-proxy==1.4.3
 lxml==4.5.1
 Markdown==3.2.2
 MarkupSafe==1.1.1
+matplotlib==3.3.1
 mccabe==0.6.1
 multidict==4.7.5
+multiprocess==0.70.10
 numpy==1.18.4
 oauthlib==3.1.0
+osqp==0.6.1
 packaging==20.4
 pandas==1.0.3
+pandas-datareader==0.9.0
+parso==0.7.0
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==7.2.0
+prompt-toolkit==3.0.5
 psycopg2==2.8.5
+ptyprocess==0.6.0
+Pygments==2.6.1
 pylint==2.5.2
 pylint-django==2.0.15
 pylint-plugin-utils==0.6
 pyparsing==2.4.7
+pyportfolioopt==1.2.4
 pyrsistent==0.16.0
 python-crontab==2.5.1
 python-dateutil==2.8.1
@@ -63,21 +91,30 @@ python3-openid==3.1.0
 pytickersymbols==1.1.11
 pytz==2020.1
 PyYAML==5.3.1
+pyzmq==19.0.1
 redis==3.5.2
 requests==2.23.0
 requests-oauthlib==1.3.0
 ruamel.yaml==0.16.10
 ruamel.yaml.clib==0.2.0
 schedule==0.6.0
+scikit-learn==0.23.2
+scipy==1.5.2
+scs==2.1.2
 six==1.14.0
 sqlparse==0.3.1
 swagger-spec-validator==2.6.0
+tabulate==0.8.7
+threadpoolctl==2.1.0
 toml==0.10.1
+tornado==6.0.4
+traitlets==4.3.3
 typed-ast==1.4.1
 typing-extensions==3.7.4.2
 uritemplate==3.0.1
 urllib3==1.25.9
 vine==1.3.0
+wcwidth==0.2.5
 wincertstore==0.2
 wrapt==1.12.1
 xlwt==1.3.0
